# mu-pipelines-driver

./: .coveragerc  .gitlab-ci.yml  .yo-rc.json  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-module.yml
mu_pipelines_driver/: __main__.py  run_config.py
mu_pipelines_driver/config/: absolute_configuration_provider.py  configuration_factory.py
mu_pipelines_driver/ioc/: destination_module_mapping.py  execute_module_mapping.py
test/config/: test_absolute_configuration_provider.py  test_connection_properties.json  test_global_properties.json  test_job_config.json  test_read_config.py  test_secrets_config.json
test/ioc/: test_ioc_container.py
test/mock/load_csv/: load_csv.py
test/mock/save_to_table/: save_to_table.py
test/mock/secrets/: hardcoded_secrets.py
