[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mu_pipelines_driver"
authors = [
    {name = "MosaicSoft", email = "mupipelines@gmail.com"},
]
description = "mu_pipelines_driver"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["data movement", "spark", "etl"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mu-pipelines-configuration-provider >=0.1.0",
    "mu-pipelines-interfaces >=0.1.4",
]
dynamic = ["version"]

[project.optional-dependencies]
spark = ["mu-pipelines-execute-spark", "mu-pipelines-destination-spark"]

[project.scripts]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.urls]
documentation = "https://mosaicsoft-data.github.io/mu-pipelines-doc/"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/